# sequential-quicksort

./: CMakeLists.txt  Readme.md  hellompirun.slurm  job-size10E7.slurm  job-size10E8.slurm  job-size10E9.slurm  job-size50E8.slurm  launcher.sh  main.c  quicksort.c  quicksort.h  sequential-quick-sort.slurm  utils.c  utils.h
